# Celluloid

./: .gitignore  README.md  app.py  celluloid.txt  central_message.py  central_message_test.py  logline_agent.py  logline_test.py  pyproject.toml  requirements.txt
act_one_builder/src/act_one_builder/: crew.py  main.py
act_one_builder/src/act_one_builder/config/: agents.yaml  tasks.yaml
api/: app.py
character_builder/: setup.py
character_builder/src/character_builder/: character_agent.py  crew.py  main.py
character_builder/src/character_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
character_builder/src/character_builder/config/: agents.yaml  tasks.yaml
generate_outline/src/generate_outline/: crew.py  main.py
generate_outline/src/generate_outline/config/: agents.yaml  tasks.yaml
outline_expansion/: README.md  pyproject.toml
outline_expansion/src/outline_expansion/: crew.py  main.py
outline_expansion/src/outline_expansion/config/: agents.yaml  tasks.yaml
output/: scene_memory.json
src/celluloid/: main.py
src/celluloid/crews/character_builder/: character_builder.py
src/celluloid/crews/character_builder/config/: agents.yaml
src/celluloid/crews/poem_crew/: poem_crew.py
src/celluloid/crews/poem_crew/config/: agents.yaml  tasks.yaml
